<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">ETC</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Erase SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_health_cold">Cold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <string name="bluetooth_is_discoverable_always">Visible to all nearby Bluetooth devices</string>
    <string name="bluetooth_not_visible_to_other_devices">Not visible to other Bluetooth devices</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_visibility_timeout">Visibility timeout</string>
    <string name="bluetooth_visibility_timeout_summary">Set how long device will be discoverable</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">Prevent use of the bluetooth dialer when the screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_device_details">Device settings</string>
    <string name="bluetooth_profile_details">Profile settings</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_rename_device">Rename phone</string>
    <string name="bluetooth_rename_button">Rename</string>
    <string name="bluetooth_disconnect_title">Disconnect?</string>
    <string name="bluetooth_disconnect_all_profiles">This will end your connection with:&lt;br>&lt;b>%1$s&lt;/b></string>
    <string name="bluetooth_disable_profile_title">Disable profile?</string>
    <string name="proxy_settings_title">Proxy settings</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="android_beam_on_summary">Ready to transmit app content via NFC</string>
    <string name="nsd_quick_toggle_title">Network service discovery</string>
    <string name="nsd_quick_toggle_summary">Allow apps on other devices to discover apps on this device</string>
    <string name="storage_title_usb">USB connection setting</string>
    <string name="usb_connection_category">CONNECT AS</string>
    <string name="usb_mtp_title">Media device (MTP)</string>
    <string name="usb_mtp_summary">Import or export files from/to device’s internal memory and SD card to PC. Sync with Window Media Player also available.</string>
    <string name="usb_ptp_title">Camera (PTP)</string>
    <string name="usb_ptp_summary">Export photos from device to PC.</string>
    <string name="tether_settings_title_all">Tethering &amp; portable hotspot</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="vpn_settings_title">VPN</string>
    <string name="wimax_settings">4G settings</string>
    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
    <string name="cell_broadcast_settings">Cell broadcasts</string>
    <string name="cell_broadcast_settings_summary">Select the types of emergency alerts to display.</string>
    <string name="title_gps_position">Current Postion</string>
    <string name="title_gps_latitude">Latitude :</string>
    <string name="title_gps_longitude">Longitude :</string>
    <string name="title_cno_measurement">Measurement CNo</string>
    <string name="title_value_cno">CNo :</string>
    <string name="plmn_input_string">Input PLMN ( ex: 45005 )</string>
    <string name="access_technology_string">Access Technology</string>
    <string name="gsm_access_technology">GSM</string>
    <string name="gsm_compact_access_technology">GSM COMPACT</string>
    <string name="umts_access_technology">UMTS</string>
    <string name="nfc_settings_title">NFC/Android Beam</string>
    <string name="nfc_settings_title_summary">Set up NFC/Android Beam</string>
    <string name="nfc_on_off">NFC</string>
    <string name="nfc_on_off_summary">NFC is available. You can use payment function for transportation and credit.</string>
    <string name="nfc_use_rw_p2p">Reading, Writing/Use P2P</string>
    <string name="nfc_use_rw_p2p_summary">Read or exchange tags and transmit data between device.</string>
    <string name="nfc_android_beam_on_off">Android Beam/P2P transmission</string>
    <string name="alwayson_settings_title">Data Network Setting</string>
    <string name="alwayson_settings_summary">Select to connect or disconnect with Data Network.</string>
    <string name="network_indicator_set_title">Network status display</string>
    <string name="usb_connection_summary">Selected connection mode will be used in next USB connection</string>
    <string name="usb_sdcard_title">External memory (SD card only)</string>
    <string name="usb_sdcard_summary">Recognize SD card as external memory and transfer files to and from PC.</string>
    <string name="usb_pcmode_title">PC data mode</string>
    <string name="usb_pcmode_summary">Manage files with supported PC tools.</string>
    <string name="usb_use_default_title">"Show settings when USB
connected."</string>
    <string name="usb_help">Tips</string>
    <string name="tips_ptp_tip1">As shown below,</string>
    <string name="tips_ptp_scanner_and_camera">Scanner and Camera</string>
    <string name="tips_ptp_model">SKY</string>
    <string name="tips_ptp_digital_camera">Digital camera</string>
    <string name="tips_ptp_tip2">"PC recognizes your phone as a digital camera. You can transfer images files to PC.
 After connecting your phone through USB, select one item from the list on PC screen."</string>
    <string name="tips_sdcard_tip1">External Memory (only SD card)</string>
    <string name="tips_sdcard_tip2">"If there is a SD card in SD slot, it will be recognized as an external memory(movable memory).
 It is available to load files in SD card to PC or back and forth using explorer in PC.
When external memory is removed, it may take few minutes to launch some applications (such as camera and gallery) due to media scanning."</string>
    <string name="tips_pcmode_tip1">PC data mode</string>
    <string name="tips_pcmode_tip2">"It is available to manage files in device using provided PC tool.
Managable file type is depend on PC tool."</string>
</resources>