<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/wireless_networks_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/airplane_mode" android:key="toggle_airplane" android:disableDependentsState="true" />
    <PreferenceScreen android:title="@string/vpn_settings_title" android:key="vpn_settings" android:fragment="com.android.settings.vpn2.VpnSettings" />
    <PreferenceScreen android:title="@string/tether_settings_title_all" android:key="tether_settings" android:fragment="com.android.settings.TetherSettings" />
    <PreferenceScreen android:title="@string/wimax_settings" android:key="wimax_settings" android:summary="@string/wimax_settings_summary">
        <intent android:targetPackage="com.android.settings.wimax" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.wimax.WimaxSettings" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/nfc_settings_title" android:key="nfc_settings" android:summary="@string/nfc_settings_title_summary" android:fragment="com.android.settings.nfc.NfcSettings" /> />
<com.android.settings.AlwaysOnSettings android:persistent="false" android:entries="@array/alwayson_settings_entries" android:title="@string/alwayson_settings_title" android:key="alwayson_settings" android:summary="@string/alwayson_settings_summary" android:dependency="toggle_airplane" android:entryValues="@array/alwayson_settings_values" />
    <PreferenceScreen android:title="@string/network_settings_title" android:key="mobile_network_settings" android:dependency="toggle_airplane">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MobileNetworkSettings" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="false" android:title="@string/nsd_quick_toggle_title" android:key="toggle_nsd" android:summary="@string/nsd_quick_toggle_summary" />
    <PreferenceScreen android:title="@string/proxy_settings_title" android:key="proxy_settings" android:fragment="com.android.settings.ProxySelector" />
    <PreferenceScreen android:title="@string/cell_broadcast_settings" android:key="cell_broadcast_settings" android:summary="@string/cell_broadcast_settings_summary">
        <intent android:targetPackage="com.android.cellbroadcastreceiver" android:action="android.intent.action.MAIN" android:targetClass="com.android.cellbroadcastreceiver.CellBroadcastSettings" />
    </PreferenceScreen>
    <ListPreference android:entries="@array/network_indicator_set_entries" android:title="@string/network_indicator_set_title" android:key="network_indicator_set" android:entryValues="@array/network_indicator_set_entryvalues" />
</PreferenceScreen>