<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:layout="@layout/nfc_custom_preference_checkbox" android:title="@string/nfc_on_off" android:key="nfc_on_off" android:summary="@string/nfc_on_off_summary" />
    <CheckBoxPreference android:persistent="false" android:layout="@layout/nfc_custom_preference_checkbox" android:title="@string/nfc_use_rw_p2p" android:key="nfc_use_rw_p2p" android:summary="@string/nfc_use_rw_p2p_summary" />
    <CheckBoxPreference android:persistent="false" android:layout="@layout/nfc_custom_preference_checkbox" android:title="@string/nfc_android_beam_on_off" android:key="nfc_beam_on_off" android:summary="@string/android_beam_on_summary" />
</PreferenceScreen>